# AI-EVA

./: .gitignore  .gitmodules  AAA一键启动.bat  ARCHITECTURE.md  INSTALL_COSYVOICE.md  README.md  README_SUBMODULES.md  SUBMODULES.md  URL  ai_eva_launcher.py  app.py  build-package.bat  chattts_api.py  config.py  config.yaml  example_client.py  index.html  indextts_api.py  install_deps.py  launcher.py  launcher_web.py  requirements-gpu.txt  requirements.txt  sensevoice_api.py  setup_gpu_env.bat  setup_python_env.bat  setup_submodules.ps1  start-all.bat  start-tts.bat  start_server.py  stop-all.bat  test_all.py  test_api.py  test_tts.py  快速开始.md  打包说明.md  更新日志.md
AI-EVA-Launcher/: .gitignore  README.md  index.html  package-lock.json  package.json  安装说明.md  快速开始.bat  快速开始指南.md
AI-EVA-Launcher/src-tauri/: Cargo.toml  create_icons.bat  create_placeholder_icons.py  create_simple_icons.ps1  tauri.conf.json
AI-EVA-Launcher/src-tauri/icons/: README.md  icon.icns  创建图标说明.md
AI-EVA-Launcher/src-tauri/src/: main.rs
SenseVoice/: api.py
modules/: __init__.py
modules/asr/: __init__.py  asr_worker.py  requirements.txt  utils.py
modules/llm/: __init__.py  ollama_client.py  prompt_templates.py  requirements.txt
modules/tts/: __init__.py  requirements.txt  tts_worker.py
modules/webui/: __init__.py  app.py  requirements.txt
utils/: audio_cache.py  logger.py
